Faster & Simpler method (final)

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "VERSION = 'cord19_v47'"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VERSION = 'cord19_v47'  # 'cord19_v35'"
+    "FIRST_RUN = True"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FIRST_RUN = False"
+    "DEBUG_RUN = False"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEBUG_RUN = True"
+    "SEED = 9173"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install pyarrow"
+    "# ! pip install pyarrow  # Needed by Pandas for Parquet operations."
    ]
   },
   {
@@ -59,10 +59,8 @@
    "outputs": [],
    "source": [
     "import re\n",
-    "from typing import List\n",
     "from pathlib import Path\n",
-    "from datetime import datetime\n",
-    "from collections import namedtuple"
+    "from datetime import datetime"
    ]
   },
   {
@@ -114,6 +112,15 @@
    "metadata": {},
    "source": [
     "# Explore sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -217,12 +224,13 @@
     "    conditions = (\n",
     "        100 >= len(text) <= 300,\n",
     "        re.match('^[A-Z][a-z]+ .*', text),\n",
-    "        not {x.lower() for x in text.split()}.isdisjoint(keywords),  # TODO Improve matching.\n",
+    "        # TODO Improve matching.\n",
+    "        not {x.lower() for x in text.split()}.isdisjoint(keywords),\n",
     "        # TODO Keep only English.\n",
     "    )\n",
     "    return all(conditions)\n",
     "\n",
-    "filtered = sentences[sentences.text.map(lambda x: ok(x))]\n",
+    "filtered = sentences[sentences.text.map(lambda x: ok(x))].copy()\n",
     "\n",
     "fcount = filtered.size\n",
     "print(f'{fcount:,} sentences ({scount-fcount:,} not selected)')"
@@ -234,37 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered['mapping'] = np.arange(fcount)  # FIXME SettingWithCopyWarning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_embeddings(model: str, version: str, indices: np.ndarray) -> torch.Tensor:\n",
-    "    # 'model' in ['Sent2Vec', 'BSV']\n",
-    "    path = Path(f'/raid/sync/proj115/bbs_data/{version}/embeddings/embeddings.h5')\n",
-    "    embeddings = H5.load(path, model, 10000, indices)[1:]\n",
-    "    tensor = torch.from_numpy(embeddings)\n",
-    "    norm = torch.norm(tensor, dim=1, keepdim=True)\n",
-    "    norm[norm == 0] = 1\n",
-    "    tensor /= norm\n",
-    "    return tensor\n",
-    "\n",
-    "mapping = filtered.index.values - 1\n",
-    "embeddings = load_embeddings('Sent2Vec', VERSION, mapping)\n",
-    "\n",
-    "ecount = embeddings.size()[0]\n",
-    "print(f'{ecount == fcount} (- {fcount-ecount:,})')  # FIXME One filtered sentence_id doesn't exist in the embeddings?!"
+    "filtered['mapping'] = np.arange(fcount)"
    ]
   },
   {
@@ -280,10 +258,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 10\n",
-    "seed= 3719\n",
+    "n = 20\n",
     "\n",
-    "sampled = filtered.sample(n, random_state=seed)"
+    "sampled = filtered.sample(n, random_state=SEED)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_embeddings(model: str, version: str) -> torch.Tensor:\n",
+    "    # 'model' in ['Sent2Vec', 'BSV']\n",
+    "    path = Path(f'/raid/sync/proj115/bbs_data/{version}/embeddings/embeddings.h5')\n",
+    "    # TODO Load only filtered indices.\n",
+    "    # NB H5.load(...) changes the ordering if given indices.\n",
+    "    embeddings = H5.load(path, model, 10000)\n",
+    "    tensor = torch.from_numpy(embeddings)\n",
+    "    norm = torch.norm(tensor, dim=1, keepdim=True)\n",
+    "    norm[norm == 0] = 1\n",
+    "    tensor /= norm\n",
+    "    return tensor\n",
+    "\n",
+    "mapping = filtered.index.values - 1\n",
+    "embeddings = load_embeddings('Sent2Vec', VERSION)[mapping]\n",
+    "\n",
+    "ecount = embeddings.size()[0]\n",
+    "print(f'{ecount == fcount} (- {fcount-ecount:,})')"
    ]
   },
   {
@@ -291,6 +300,17 @@
    "metadata": {},
    "source": [
     "# Pair sentences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strategies:\n",
+    "- [ ] random\n",
+    "- [x] most similar\n",
+    "- [ ] quartiles\n",
+    "- [ ] power law"
    ]
   },
   {
@@ -308,9 +328,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sentence = namedtuple('Sentence', 'id, text')\n",
-    "Pair = namedtuple('Pair', 'left, right, similarity, dissimilarity')\n",
-    "\n",
     "def compute_similarities(index: int, embeddings: torch.Tensor) -> torch.Tensor:\n",
     "    embedding = embeddings[index]\n",
     "    norm = torch.norm(embedding).item()\n",
@@ -318,37 +335,29 @@
     "    embedding /= norm\n",
     "    return torch.nn.functional.linear(embedding, embeddings)\n",
     "\n",
-    "# c = 0\n",
-    "# i = 0\n",
-    "pairs = []\n",
+    "rows = []\n",
     "\n",
     "for x in tqdm(sampled.itertuples(), total=n):\n",
-    "    # while c < n and i < fcount:\n",
-    "        # i += 1\n",
-    "    \n",
     "    similarities = compute_similarities(x.mapping, embeddings)\n",
     "    sims, idxs = similarities.sort(descending=True)\n",
-    "\n",
-    "    rank = 0  # FIXME\n",
-    "\n",
-    "    sim = sims[1:][rank].item()\n",
-    "    idx = idxs[1:][rank].item()\n",
-    "\n",
-    "    s0 = Sentence(x.Index, x.text)\n",
+    "    \n",
+    "    # TODO Add other strategies.\n",
+    "    sim, idx = sims[1:][0].item(), idxs[1:][0].item()\n",
+    "    \n",
+    "    i0, s0 = x.Index, x.text\n",
     "    row = filtered.loc[filtered.mapping == idx]\n",
-    "    s1 = Sentence(row.index.item(), row.text.item())\n",
-    "\n",
-    "    doc0 = nlp(s0.text)\n",
-    "    doc1 = nlp(s1.text)\n",
-    "    set0 = {x.lemma_ for x in doc0 if x.is_alpha}\n",
-    "    set1 = {x.lemma_ for x in doc1 if x.is_alpha}\n",
+    "    i1, s1 = row.index.item(), row.text.item()\n",
+    "    \n",
+    "    doc0, doc1 = nlp(s0), nlp(s1)\n",
+    "    set0, set1 = {x.lemma_ for x in doc0 if x.is_alpha}, {x.lemma_ for x in doc1 if x.is_alpha}\n",
     "    dissimilarity = min(len(set0 - set1) / len(set0), len(set1 - set0) / len(set1))\n",
+    "    \n",
+    "    rows.append((i0, s0, i1, s1, sim, 1 - dissimilarity))\n",
+    "    \n",
+    "cols = ['sentence_id_1', 'sentence_text_1', 'sentence_id_2', 'sentence_text_2',\n",
+    "        'vectors_similarity', 'words_similarity']\n",
     "\n",
-    "    pairs.append(Pair(s0, s1, sim, dissimilarity))\n",
-    "        # c += 1\n",
-    "\n",
-    "# pcount = len(pairs)\n",
-    "# print(f'Pairing succeded? {pcount == n} ({n-pcount:,} remaining pairings)')"
+    "pairs = pd.DataFrame(rows, columns=cols).sort_values('vectors_similarity', ascending=False)"
    ]
   },
   {
@@ -359,17 +368,17 @@
    },
    "outputs": [],
    "source": [
-    "def format_results(pairs: List[Pair]) -> str:\n",
+    "def format_results(pairs: pd.DataFrame) -> str:\n",
     "    def _(i, x):\n",
     "        return (\n",
-    "            f'pair: {i}  id1: {x.left.id}  id2: {x.right.id}  '\n",
-    "            f'sim: {x.similarity:.3f}  dissim: {x.dissimilarity:.3f}\\n'\n",
+    "            f'pair: {i}  id_1: {x.sentence_id_1}  id_2: {x.sentence_id_2}  '\n",
+    "            f'vectors_sim: {x.vectors_similarity:.3f}  words_sim: {x.words_similarity:.3f}\\n'\n",
     "            f'-\\n'\n",
-    "            f'{x.left.text.strip()}\\n'\n",
+    "            f'{x.sentence_text_1.strip()}\\n'\n",
     "            f'-\\n'\n",
-    "            f'{x.right.text.strip()}\\n'\n",
+    "            f'{x.sentence_text_2.strip()}\\n'\n",
     "        )\n",
-    "    formatted = (_(i, x) for i, x in enumerate(pairs))\n",
+    "    formatted = (_(i, x) for i, x in enumerate(pairs.itertuples()))\n",
     "    return '\\n\\n'.join(formatted)\n",
     "\n",
     "print(format_results(pairs[:10]))"
@@ -381,11 +390,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_results_txt(pairs: List[Pair], n: int, directory: str) -> None:\n",
+    "def write_results_txt(pairs: pd.DataFrame, n: int, directory: str) -> None:\n",
     "    time =  datetime.now().strftime(\"%Y-%m-%d_%Hh%M\")\n",
+    "    filename = f'pairs_n{n}_{time}.txt'\n",
+    "    path = Path(directory, filename)\n",
     "    content = format_results(pairs)\n",
-    "    path = Path(directory, f'pairs_n{n}_{time}.txt')\n",
     "    path.write_text(content, encoding='utf-8')\n",
+    "    print(f'<file> {filename}')\n",
     "\n",
     "write_results_txt(pairs, n, '.')"
    ]
