Better running time and output indications

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -43,16 +43,15 @@
    "outputs": [],
    "source": [
     "# Number of sentence pairs to sample.\n",
-    "N = 20\n",
+    "N = 100\n",
     "\n",
     "# Maximum number of sentences to consider.\n",
     "# This could be used for experimenting or debugging.\n",
     "# If None, all sentences are loaded.\n",
-    "LIMIT = 10000\n",
+    "LIMIT = None\n",
     "\n",
     "# File path to a dump of all the sentences.\n",
     "# This allows a faster loading of the sentences.\n",
-    "# pyarrow should be installed (pip install pyarrow).\n",
     "# If None, sentences are loaded from the DATABASE (see below).\n",
     "DUMP = 'sentences-cord19_v47-2020-10-01.parquet'\n",
     "\n",
@@ -119,13 +118,11 @@
    "outputs": [],
    "source": [
     "if DUMP:\n",
-    "    # Takes 25 secs.\n",
     "    print('<loading> from dump')\n",
     "    sentences = pd.read_parquet(DUMP)\n",
     "    if LIMIT:\n",
     "        sentences = sentences[:LIMIT]\n",
     "else:\n",
-    "    # Takes 5 mins for 20.5 millions sentences.\n",
     "    print('<loading> from database')\n",
     "    engine = sqlalchemy.create_engine(DATABASE)\n",
     "    statement = 'SELECT sentence_id, text FROM sentences'\n",
@@ -135,6 +132,10 @@
     "\n",
     "scount = sentences.size\n",
     "print(f'{scount:,} sentences')\n",
+    "\n",
+    "# Takes for 20.5 millions sentences:\n",
+    "#  - Parquet: 25 secs\n",
+    "#  - MySQL: 5 mins\n",
     "# 20,510,932 sentences"
    ]
   },
@@ -145,8 +146,9 @@
    "outputs": [],
    "source": [
     "# Create a dump of the sentences.\n",
-    "# Takes 20 secs for 20.5 millions sentences.\n",
-    "# sentences.to_parquet('sentences-cord19_v47-2020-10-01.parquet', index=True)"
+    "# sentences.to_parquet('sentences-cord19_v47-2020-10-01.parquet', index=True)\n",
+    "\n",
+    "# Takes 20 secs for 20.5 millions sentences."
    ]
   },
   {
@@ -162,11 +164,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Takes 26 secs for 20.5 millions sentences.\n",
     "sentences = sentences.drop_duplicates()\n",
     "\n",
     "dcount = sentences.size\n",
     "print(f'{dcount:,} sentences (- {scount-dcount:,} duplicates)')\n",
+    "\n",
+    "# Takes 25 secs for 20.5 millions sentences.\n",
     "# 19,131,302 sentences (- 1,379,630 duplicates)"
    ]
   },
@@ -183,8 +186,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
     "# All keywords in bold from BBS Ontology v0.3 on 17.09.2020.\n",
     "keywords = {'pathogens', 'cardiac injury', 'cardiovascular disease', 'sars',\n",
     "            'acute respiratory distress syndrome', 'gas exchange', 'inflammation',\n",
@@ -223,11 +224,12 @@
     "    )\n",
     "    return all(conditions)\n",
     "\n",
-    "# Takes 2 mins 40 for 20.5 millions sentences and 100 keywords.\n",
     "filtered = sentences[sentences.text.map(ok)].copy()\n",
     "\n",
     "fcount = filtered.size\n",
     "print(f'{fcount:,} sentences ({scount-fcount:,} not selected)')\n",
+    "\n",
+    "# Takes 2 mins 45 for 20.5 millions sentences and 100 keywords.\n",
     "# 1,264,496 sentences (19,246,436 not selected)"
    ]
   },
@@ -282,12 +284,13 @@
     "    tensor /= norm\n",
     "    return tensor\n",
     "\n",
-    "# Takes 5 mins 30 for 20.5 millions embeddings and 225 thousands selected sentences.\n",
     "embeddings = load_embeddings(MODEL, filtered.index.values)\n",
     "\n",
     "ecount = embeddings.size()[0]\n",
     "print(f'{ecount:,} embeddings (same as selected sentences? {ecount == fcount})')\n",
-    "# 224,343 embeddings (same as selected sentences? True)"
+    "\n",
+    "# Takes 23 mins 30 for 1.3 million embeddings to select from 20.5 millions in total.\n",
+    "# 1,264,496 embeddings (same as selected sentences? True)"
    ]
   },
   {
@@ -303,8 +306,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Takes 25 secs.\n",
-    "nlp = spacy.load('en_core_sci_lg')"
+    "nlp = spacy.load('en_core_sci_lg')\n",
+    "# Takes 25 secs."
    ]
   },
   {
@@ -315,8 +318,6 @@
    },
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
     "def pair(mapping: int, embeddings: torch.Tensor, sentences: pd.DataFrame) -> Tuple[int, str, float]:\n",
     "    embedding = embeddings[mapping]\n",
     "    similarities = torch.nn.functional.linear(embedding, embeddings)\n",
@@ -355,15 +356,24 @@
     "\n",
     "cols = ['sentence_id_1', 'sentence_id_2', 'sentence_text_1', 'sentence_text_2',\n",
     "        'vectors_similarity', 'words_similarity']\n",
-    "pairs = pd.DataFrame(rows, columns=cols).sort_values('vectors_similarity', ascending=False)"
+    "pairs = pd.DataFrame(rows, columns=cols).sort_values('vectors_similarity', ascending=False)\n",
+    "\n",
+    "# Takes 10 secs for 100 pairs amongst 1.3 million selected embeddings / sentences."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def format_results(pairs: pd.DataFrame) -> str:\n",
@@ -378,7 +388,7 @@
     "        )\n",
     "    return '\\n\\n'.join(_(i, x) for i, x in enumerate(pairs.itertuples()))\n",
     "\n",
-    "print(format_results(pairs[:10]))"
+    "print(format_results(pairs[:3]))"
    ]
   },
   {
